--- a/Module07_HW.ipynb
+++ b/Module07_HW.ipynb
@@ -120,13 +120,13 @@
         "print(\"Test Accuracy:\", test_accuracy * 100,\"%\")"
       ],
       "metadata": {
-        "id": "Bbw9TQ42mWus",
-        "outputId": "9e958dcb-b47c-4095-cbce-66e6bab9d988",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Bbw9TQ42mWus",
+        "outputId": "d2027fd2-f117-4fba-e806-af500d552374"
       },
-      "execution_count": 2,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -147,6 +147,72 @@
       "metadata": {
         "id": "vzJto0C8nfGr"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "4."
+      ],
+      "metadata": {
+        "id": "hu-3vkjtoIk_"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.neighbors import KNeighborsClassifier\n",
+        "from sklearn.model_selection import GridSearchCV\n",
+        "\n",
+        "# Create a pipeline with standardization and K-nearest neighbors classifier\n",
+        "pipeline = Pipeline([\n",
+        "    ('scaler', StandardScaler()),  # Standardize the features\n",
+        "    ('knn', KNeighborsClassifier())  # K-nearest neighbors classifier\n",
+        "])\n",
+        "\n",
+        "# Define the parameter grid for grid search\n",
+        "param_grid = {\n",
+        "    'knn__n_neighbors': [1, 3, 5, 7, 9]  # Values to be tested for the number of neighbors\n",
+        "}\n",
+        "\n",
+        "# Create a GridSearchCV object with the pipeline and parameter grid\n",
+        "grid_search = GridSearchCV(pipeline, param_grid, cv=10)\n",
+        "\n",
+        "# Fit the GridSearchCV object on the data\n",
+        "grid_search.fit(X, y)\n",
+        "\n",
+        "# Get the optimized parameters and best score from the grid search\n",
+        "optimized_params = grid_search.best_params_\n",
+        "best_score = grid_search.best_score_\n",
+        "\n",
+        "# Print the optimized parameters and best score\n",
+        "print(\"Optimized Parameters:\", optimized_params)\n",
+        "print(\"Best Score:\", best_score * 100,\"%\")\n",
+        "\n",
+        "# Get the test accuracy using the best estimator from the grid search\n",
+        "test_accuracy = grid_search.best_estimator_.score(X_test, y_test)\n",
+        "\n",
+        "# Print the test accuracy\n",
+        "print(\"Test Accuracy:\", test_accuracy * 100,\"%\")"
+      ],
+      "metadata": {
+        "id": "cIwMXgJIoJcm",
+        "outputId": "e22c1a43-a24c-415f-cf6a-e9f7c5966024",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Optimized Parameters: {'knn__n_neighbors': 9}\n",
+            "Best Score: 97.74509803921569 %\n",
+            "Test Accuracy: 97.22222222222221 %\n"
+          ]
+        }
+      ]
     }
   ]
 }
