--- a/Module07_HW.ipynb
+++ b/Module07_HW.ipynb
@@ -195,11 +195,11 @@
         "print(\"Test Accuracy:\", test_accuracy * 100,\"%\")"
       ],
       "metadata": {
-        "id": "cIwMXgJIoJcm",
-        "outputId": "e22c1a43-a24c-415f-cf6a-e9f7c5966024",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "cIwMXgJIoJcm",
+        "outputId": "e22c1a43-a24c-415f-cf6a-e9f7c5966024"
       },
       "execution_count": 7,
       "outputs": [
@@ -210,6 +210,58 @@
             "Optimized Parameters: {'knn__n_neighbors': 9}\n",
             "Best Score: 97.74509803921569 %\n",
             "Test Accuracy: 97.22222222222221 %\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "5."
+      ],
+      "metadata": {
+        "id": "ArpUW-FepT06"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Assign the values from the confusion matrix\n",
+        "TP = 100  # True Positives\n",
+        "TN = 50   # True Negatives\n",
+        "FP = 10   # False Positives\n",
+        "FN = 5    # False Negatives\n",
+        "\n",
+        "# Calculate accuracy\n",
+        "accuracy = (TP + TN) / (TP + TN + FP + FN) * 100\n",
+        "\n",
+        "# Calculate precision\n",
+        "precision = TP / (TP + FP) * 100\n",
+        "\n",
+        "# Calculate recall\n",
+        "recall = TP / (TP + FN) * 100\n",
+        "\n",
+        "# Print the results\n",
+        "print(\"Accuracy:\", accuracy,\"%\")\n",
+        "print(\"Precision:\", precision,\"%\")\n",
+        "print(\"Recall:\", recall,\"%\")"
+      ],
+      "metadata": {
+        "id": "x_ltddw-pUoe",
+        "outputId": "9d3195e5-9feb-488c-e3d7-be020d09c77c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Accuracy: 90.9090909090909 %\n",
+            "Precision: 90.9090909090909 %\n",
+            "Recall: 95.23809523809523 %\n"
           ]
         }
       ]
