--- a/Module07_HW.ipynb
+++ b/Module07_HW.ipynb
@@ -126,7 +126,7 @@
         "id": "Bbw9TQ42mWus",
         "outputId": "d2027fd2-f117-4fba-e806-af500d552374"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -151,7 +151,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "4."
+        "**4. In the above data set, fit KNN using 10-fold cross validation and grid search to optimize the number of neighbors; print the optimized parameters and the test accuracy.**"
       ],
       "metadata": {
         "id": "hu-3vkjtoIk_"
@@ -201,7 +201,7 @@
         "id": "cIwMXgJIoJcm",
         "outputId": "e22c1a43-a24c-415f-cf6a-e9f7c5966024"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -217,7 +217,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "5."
+        "**5. Calculate the accuracy, precision and recall based on the following confusion matrix.**"
       ],
       "metadata": {
         "id": "ArpUW-FepT06"
@@ -253,7 +253,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -265,6 +265,17 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**6. Read the last section in the Chapter 6 of textbook, \"Dealing with class imbalance\". Discuss why the accuracy is not a valid meature metric in an imbalanced dataset? What other metrics can be used then?**\n",
+        "\n",
+        "Accuracy is not a reliable measure when the dataset has a large difference in the number of samples between different classes. It can give a misleading impression of a model's performance. Instead, metrics like precision, recall, and AUC-ROC provide a more accurate evaluation of how well a model identifies the minority class and overall classification performance."
+      ],
+      "metadata": {
+        "id": "3vU_v4bx_Ugl"
+      }
     }
   ]
 }
