--- a/Module08_Report_Project.ipynb
+++ b/Module08_Report_Project.ipynb
@@ -157,8 +157,18 @@
         "Implement a model in Jupyter Notebook and discuss the following topics:\n",
         " - Describe the problem\n",
         "   - What is the problem?\n",
+        "   The problem is about predicting whether a person will have trouble paying back their credit (credit default) or not. Imagine you lend money to people, and you want to know who might have difficulty repaying the loan and who will not. To predict this, we will use some information about the borrowers, like their age, income, etc.\n",
+        "\n",
         "   - What is the type of machine learning?\n",
+        "   The type of machine learning used for this problem is supervised learning. It is supervised because the dataset contains labeled examples, where the target variable (credit default) is known for each instance in the data. The goal is to train a model on this labeled data so that it can make predictions on new, unseen data.\n",
+        "\n",
         "   - What are the feature variables and target variables?\n",
+        "       * Feature Variables: These are pieces of information we have about each borrower. For example, the person's age, how much they earn, their credit score, etc. These features will help the computer make its prediction.\n",
+        "\n",
+        "    * Target Variable: This is what we want to predict. In this case, it's whether a person will default on their credit or not. So the computer will look at the features (like age, income, credit score) and try to predict if the person will have trouble paying back the loan or not.\n",
+        "\n",
+        "=========================================================\n",
+        "\n",
         " - Data exploration and preprocessing\n",
         "   - How did you explore the data?\n",
         "   - How did you clean the data (are there missing or invalid values)?\n",
