--- a/Module08_Report_Project.ipynb
+++ b/Module08_Report_Project.ipynb
@@ -172,14 +172,46 @@
         " - Data exploration and preprocessing\n",
         "   - How did you explore the data?\n",
         "   - How did you clean the data (are there missing or invalid values)?\n",
+        "\n",
+        "     -  Data exploration involves loading the dataset into a pandas DataFrame, viewing the first few rows, calculating basic statistics, checking data types, and identifying missing values and duplicate records.\n",
+        "     \n",
+        "     - Data cleaning may include removing rows with missing values, handling any invalid values (e.g., negative age), and removing duplicate rows to ensure data accuracy and uniqueness. These steps prepare the data for analysis, enabling valuable insights and informed decision-making.\n",
+        "\n",
         " - Modeling\n",
         "   - Split 20% data as the test set using the random status 123.\n",
         "   - What machine learning algorithms were used? Which is better?\n",
+        "\n",
+        "     Two machine learning algorithms were used for credit default prediction:\n",
+        "\n",
+        "        - Logistic Regression LR\n",
+        "        - Random Forest RF\n",
+        "\n",
+        "     The Random Forest model perfoms slightly better than the the Logistic Regression model for the credit default prediction problem. Random Forest has higher values for accuracy, precision, and recall compared to the Logistic Regression model.\n",
+        "\n",
+        "\n",
         "   - What evaluation metric do you prefer?\n",
         "   - How did you evaluation model's performance?\n",
+        "\n",
+        "       - Data Preparation\n",
+        "       - Model Training & Evaluation\n",
+        "       - Evaluation Metrics\n",
+        "       - Comparation & Interpretation\n",
+        "\n",
+        "\n",
         "   - How did you diagnose the model? Is it overfitting, under fitting, or good fitting?\n",
+        "      \n",
+        "      - The models appear to be reasonably well-fitted to the data. The Random Forest model has slightly better performance metrics on the test data compared to the Logistic Regression model.\n",
+        "\n",
         " - Results and discussion\n",
-        "   - What is your model's results? Is it good? Do you have any concerns?\n",
+        "   - What is your model's results?\n",
+        "      - The results for two machine learning models, Logistic Regression, and Random Forest, on the test set. The results include the accuracy, precision, recall, F1 score, and ROC AUC score for each model.\n",
+        "\n",
+        "   - Is it good?\n",
+        "\n",
+        "   - Do you have any concerns?\n",
+        "      - Overfitting\n",
+        "      - underfitting\n",
+        "      - Data Imbalance\n",
         "   \n",
         "**Due Date:** the last week."
       ]
